--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -38,9 +38,10 @@ button {
 }
 
 .form-group input{
+    border: 1px solid gray;
     margin: 10px 0px 10px 0px;
     padding: 10px;
-    width: 220px;
+    width: 250px;
 }
 
 
