--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,3 @@
-h2 {
-    font-size: 30px;
-}
 header  nav a{
     margin: 10px;
     color: #fff;
@@ -9,10 +6,29 @@ header .container{
     display: flex;
     align-items: center;
     justify-content: space-between; 
+
+    height: 50px;
     color: #fff;
     background: rgb(4, 141, 146);
 }
 .logo {
     margin-left: 10px;
 }
+.logo h2 {
+    font-size: 30px;
+}
+#icon{   
+    margin-right: 10px;
+}
 
+@media screen and (max-width:400px){
+    header .logo{
+        font-size: 15px;
+    }
+
+    header .container{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5px;
+    }
+}
