--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,7 @@
         <button type="submit" class="btn btn-primary">
         <fa-icon [icon]="faUserLock"></fa-icon>  Login
         </button>
+        <a href="/caduser"><fa-icon [icon]="faUserPlus"></fa-icon>Cadastra-se</a>
         <a href="#"><fa-icon [icon]="faKey"></fa-icon>Recurar senha</a>
   
       </div>
