--- a/src/app/caduser/caduser.component.html
+++ b/src/app/caduser/caduser.component.html
@@ -7,29 +7,33 @@
         <div *ngIf="error">
           <p><strong>{{error}}</strong></p>
         </div>
+
+        <div *ngIf="camposvazio">
+          <p><strong>{{camposvazio}}</strong></p>
+        </div>
         <div class="form-group">
-          <label for="exampleInputEmail1">Nome</label><br>
+          <label for="exampleInputEmail1">Nome <span>*</span></label><br>
           <input type="text" class="form-control"  name="nome" ngModel >
           
         </div>
         <div class="form-group">
-            <label for="exampleInputEmail1">Sobrenome</label><br>
+            <label for="exampleInputEmail1">Sobrenome <span>*</span></label><br>
             <input type="text" class="form-control"  name="sobrenome" ngModel >
             
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail1">Email</label><br>
+            <label for="exampleInputEmail1">Email <span>*</span></label><br>
             <input type="email" class="form-control"  name="email" ngModel >
             
           </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label><br>
+          <label for="exampleInputPassword1">Password <span>*</span></label><br>
           <input type="password" class="form-control" id="exampleInputPassword1" name="password" ngModel >
         </div>
 
         <div class="form-group">
-            <label for="exampleInputPassword1">Repet passwod</label><br>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="repet" ngModel >
+            <label for="exampleInputPassword1">Repet passwod <span>*</span></label><br>
+            <input type="password" class="form-control" id="exampleInputPassword1" name="reset" ngModel >
           </div>
 
         <div class="button">
