--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,35 @@
-<p>home works!</p>
-<button (click)="idTokem()">Save</button>
+<div class="page-home">
 
-<button (click)="logout()">Sair</button>
+    <div class="logo">
+      Seja bem vindo  <h4>{{ nome }}</h4>
+    </div>
+  
+    <div class="menu-home">
+     <div class="menu-left">
+       <nav>
+           <a href="#">Home</a>
+           <a href="#">Tarefas</a>
+       </nav>
+      </div>
+      
+      <!--menu-rigth-->
+      <app-menuhome></app-menuhome>
+    </div>
+  
+  </div>
+
+  <div class="flex-container">
+      <div class="sidebar">
+          sidebar
+      </div>
+      <div class="container">
+          {{nome}}
+      </div>
+  </div>
+
+  <div class="footer">
+      footer
+  </div>
+
+  
+
