--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-/*@import '~bootstrap/dist/css/bootstrap.min.css'*/
+
+
+
 :root{
     --bg-header : rgb(50, 51, 46)
 }
@@ -12,7 +13,87 @@
 
 body{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+  
 }
+
+/*home*/
+.page-home {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+   
+}
+.logo {
+    background:rgba(0, 0, 0, .7);
+    width: 25%;
+    height: 80px;
+    color: #fff;
+    border: 1px rgb(223, 225, 226);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.menu-home{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background:#fff;
+    height: 80px;
+    width: 75%;
+   border: 1px rgb(223, 217, 217);
+  
+
+}
+
+/*menu-left*/
+.menu-left nav {
+    margin-left: 10px;
+}
+.menu-home nav a {
+    margin-left: 10px;
+}
+
+/*container*/
+.flex-container{
+    display: flex;
+    justify-content: space-between;
+}
+.sidebar{
+    height: 80vh;
+   width: 25%;
+   background:rgba(0, 0, 0, .7);
+   box-shadow: 5px 3px 5px rgb(223, 225, 226);
+   color: #fff;
+}
+.container{
+    height: 80vh;
+    width: 75%;
+    background: rgb(223, 225, 226);
+}
+
+/*footer*/
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px rgb(223, 225, 226);
+    height: 50px;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
