--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="container">
+    <div class="menu">
       <h2 class="logo"> <fa-icon [icon]="faList" id="icon"></fa-icon>APP TODO LISTE</h2>
       <nav>
         <a [routerLink]="['']"><fa-icon [icon] = "faHome"></fa-icon>Home</a>
