--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -8,12 +8,13 @@ a {
 
 
 button {
-    background-color: rgb(14, 32, 138);
+    background:rgba(0, 0, 0, .7);
     color: #fff;
     font-size: 12px;
     padding: 10px;
     border: none;
 }
+
 .login h3 {
     text-align: center;
     margin: 20px 0px 30px 0px;
