--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,14 +2,14 @@ header  nav a{
     margin: 10px;
     color: #fff;
 }
-header .container{
+header .menu{
     display: flex;
     align-items: center;
     justify-content: space-between; 
 
     height: 50px;
     color: #fff;
-    background: rgb(14, 32, 138);
+    background:rgba(0, 0, 0, .7);
 }
 .logo {
     margin-left: 10px;
@@ -26,7 +26,7 @@ header .container{
         font-size: 15px;
     }
 
-    header .container{
+    header .menu{
         display: flex;
         flex-direction: column;
         margin-bottom: 5px;
