--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -15,15 +15,38 @@
    
         <div class="card2">
             <h1>Lista 78</h1>
-            
+            <div class="icon">
+                <a>
+                    <fa-icon [icon]="faListUl"></fa-icon>
+                </a>
+            </div>
+            <a href="#" class="info2">
+                <fa-icon [icon]="faEye"></fa-icon> info
+             </a>
         </div>
    
     
         <div class="card3">
             <h1>Valor 1260</h1>
+            <div class="icon">
+                <a>
+                    <fa-icon [icon]="faMoneyBill"></fa-icon>
+                </a>
+            </div>
+            <a href="#" class="info3">
+                <fa-icon [icon]="faEye"></fa-icon> info
+             </a>
         </div>
 
         <div class="card4">
             <h1>Concluidas 152</h1>
+            <div class="icon">
+                <a>
+                    <fa-icon [icon]="faCheck"></fa-icon>
+                </a>
+            </div>
+            <a href="#" class="info4">
+                <fa-icon [icon]="faEye"></fa-icon> info
+             </a>
     
 </div>
