--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="page-home">
 
     <div class="logo">
-        <h4>{{ nome }}</h4>
+       
     </div>
 
     <div class="menu-home">
         <div class="menu-left">
             <nav>
-                <a href="#">
+                <a href="/home">
                     <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
                 </a>
             </nav>
