--- a/src/app/menuhome/menuhome.component.html
+++ b/src/app/menuhome/menuhome.component.html
@@ -1,3 +1,4 @@
 <nav class="menu-rigth">
+   Bem vindo {{ nome }}
     <a  (click)="logout()"><fa-icon [icon]="faSignOutAlt" id="icon"></fa-icon>sair</a>
   </nav>
