--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -1,1 +1,37 @@
-<app-menuhome></app-menuhome>
+<div class="page-home">
+
+    <div class="logo">
+        
+    </div>
+
+    <div class="menu-home">
+        <div class="menu-left">
+            <nav>
+                <a href="/home">
+                    <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
+                </a>
+            </nav>
+        </div>
+
+        <!--menu-rigth-->
+        <app-menuhome></app-menuhome>
+    </div>
+
+</div>
+
+<div class="flex-container">
+    <div class="sidebar">
+        <!--sidebar-->
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="container">
+       <!--app-cards-->
+       <app-cards></app-cards>
+
+       <!--table list tarefas-->
+    </div>
+</div>
+
+<div class="footer">
+    footer
+</div>
