--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
             </a>
         </li>
         <li>
-            <a>
+            <a [routerLink]="['/listatarefa']">
                Tarefas
             </a>
         </li>
