--- a/src/app/caduser/caduser.component.html
+++ b/src/app/caduser/caduser.component.html
@@ -2,7 +2,7 @@
 
 <section class="caduser">
      
-    <form #f="ngForm" (ngSubmit)="OnSubmit(f)">
+    <form #f="ngForm" (ngSubmit)="OnSubmit(f)" novalidate>
         <h3>Novo Usuário</h3>
         <div *ngIf="error">
           <p><strong>{{error}}</strong></p>
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Nome <span>*</span></label><br>
-          <input type="text" class="form-control"  name="nome" ngModel >
+          <input type="text" class="form-control"  name="nome" ngModel required #nome="ngModel">
           
         </div>
         <div class="form-group">
