--- a/src/app/caduser/caduser.component.css
+++ b/src/app/caduser/caduser.component.css
@@ -4,7 +4,10 @@
     color: rgb(53, 50, 50);
     margin: 20px 0px 30px 0px;
 }
-
+.caduser p{
+    color:red;
+    font-size: 12px;
+}
 .caduser {
     display: flex;
     justify-content: center;
