--- a/src/app/listatarefa/listatarefa.component.css
+++ b/src/app/listatarefa/listatarefa.component.css
@@ -4,8 +4,9 @@
     align-items: center;
 }
 table{
-    width: 100%;
-    margin: 10px;
+    width: 98%;
+    height: 260px;
+    
 }
 thead{
    
@@ -15,21 +16,64 @@ tbody{
     background-color:#343a40;
 }
 th{
-    padding: 10px;
+    padding: 20px;
     color: rgb(7, 55, 95);
 }
 td{
-    padding: 5px;
+    padding: 10px;
     color: rgb(243, 233, 233);
     font-size: 15px;
 }
 
+/*detalhes tarefas */
+.detalhe-tarefa{
+    width: 100%;
+    margin: 10px;
+    color: #343a40;
+}
+
+ .form-group{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+input  , select{
+    margin: 5px 0px 5px 0px;
+    padding: 5px 0px 5px 0px;
+    border: 1px solid #343a40 ;
+    border-radius: 5px;
+    width: 250px;
+}
+button{
+    padding: 5px;
+    color: blanchedalmond;
+    background: #343a40;
+}
+
+
 @media screen and (max-width:550px){
+    .tableLista{
+        display: flex;
+        flex-direction: column;
+    }
+    table {
+
+        margin: 10px;
+        border: none;
+    }
     th{
+        font-size: 12px;
         color: rgb(7, 55, 95);
     }
+    th:nth-child(2) , td:nth-child(2){
+        display: none;
+    }
+   
     td{
         color: rgb(243, 233, 233);
-        font-size: 12px;
+        font-size: 15px;
     }
+
+   
 }
