--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,52 +1,53 @@
 <div class="cards">
-   
-        <div class="card1">
-            <h1>Pendente 50</h1>
-            <div class="icon">
-                <a>
-                    <fa-icon [icon]="faListAlt" ></fa-icon>
-                </a>
-            </div>
-            <a href="#" class="info1">
-               <fa-icon [icon]="faEye"></fa-icon> info
+
+    <div class="card1">
+        <h3>Pendente 50</h3>
+        <div class="icon">
+            <a>
+                <fa-icon [icon]="faListAlt"></fa-icon>
             </a>
         </div>
-   
-   
-        <div class="card2">
-            <h1>Lista 78</h1>
-            <div class="icon">
-                <a>
-                    <fa-icon [icon]="faListUl"></fa-icon>
-                </a>
-            </div>
-            <a href="#" class="info2">
-                <fa-icon [icon]="faEye"></fa-icon> info
-             </a>
-        </div>
-   
-    
-        <div class="card3">
-            <h1>Valor 1260</h1>
-            <div class="icon">
-                <a>
-                    <fa-icon [icon]="faMoneyBill"></fa-icon>
-                </a>
-            </div>
-            <a href="#" class="info3">
-                <fa-icon [icon]="faEye"></fa-icon> info
-             </a>
-        </div>
+        <a class="info1">
+            <fa-icon [icon]="faEye"></fa-icon> info
+        </a>
+    </div>
 
-        <div class="card4">
-            <h1>Concluidas 152</h1>
-            <div class="icon">
-                <a>
-                    <fa-icon [icon]="faCheck"></fa-icon>
-                </a>
-            </div>
-            <a href="#" class="info4">
-                <fa-icon [icon]="faEye"></fa-icon> info
-             </a>
-    
+
+    <div class="card2">
+        <h3>Lista 78</h3>
+        <div class="icon">
+            <a>
+                <fa-icon [icon]="faListUl"></fa-icon>
+            </a>
+        </div>
+        <a class="info2">
+            <fa-icon [icon]="faEye"></fa-icon> info
+        </a>
+    </div>
+
+
+    <div class="card3">
+        <h3>Valor 1260</h3>
+        <div class="icon">
+            <a>
+                <fa-icon [icon]="faMoneyBill"></fa-icon>
+            </a>
+        </div>
+        <a class="info3">
+            <fa-icon [icon]="faEye"></fa-icon> info
+        </a>
+    </div>
+
+    <div class="card4">
+        <h3>Concluidas 152</h3>
+        <div class="icon">
+            <a>
+                <fa-icon [icon]="faCheck"></fa-icon>
+            </a>
+        </div>
+        <a class="info4">
+            <fa-icon [icon]="faEye"></fa-icon> info
+        </a>
+    </div>
+
 </div>
