--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
     <div class="menu-home">
         <div class="menu-left">
             <nav>
+               
                 <a href="/home">
                     <fa-icon [icon]="faHome" id="icon"></fa-icon>Home
                 </a>
@@ -30,6 +31,6 @@
     </div>
 </div>
 
-<div class="footer">
+<!--<div class="footer">
     footer
-</div>
+</div>-->
