--- a/src/app/listatarefa/listatarefa.component.css
+++ b/src/app/listatarefa/listatarefa.component.css
@@ -2,10 +2,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
 }
 table{
-    width: 98%;
+    margin: 0px 10px 0px 10px;
+    width: 100%;
     height: 260px;
+    border-color:#bcc7d3;
     
 }
 thead{
@@ -13,7 +16,7 @@ thead{
     background-color: rgb(214, 196, 33);
 }
 tbody{
-    background-color:#343a40;
+    background-color:#1f2429;
 }
 th{
     padding: 20px;
@@ -28,7 +31,7 @@ td{
 /*detalhes tarefas */
 .detalhe-tarefa{
     width: 100%;
-    margin: 10px;
+    margin: 0px;
     color: #343a40;
 }
 
@@ -38,21 +41,38 @@ td{
     align-items: center;
     width: 100%;
 }
+label {
+    font-size: 12px;
+    margin: 5px;
+}
 input  , select{
-    margin: 5px 0px 5px 0px;
+    font-size: 12px;
+    margin: 3px 0px 0px 0px;
     padding: 5px 0px 5px 0px;
-    border: 1px solid #343a40 ;
+    border: 1px solid #bcc7d3 ;
     border-radius: 5px;
     width: 250px;
 }
 button{
+    margin: 5px;
     padding: 5px;
-    color: blanchedalmond;
-    background: #343a40;
+    color: white;
+    background: rgb(2, 81, 100);
+    border: none;
+}
+
+.button-new{
+    background: rgb(44, 100, 221);
+}
+.button-del{
+    background: rgb(245, 69, 4);
 }
 
 
-@media screen and (max-width:550px){
+@media screen and (max-width:800px){
+    .container{
+        height: auto;
+    }
     .tableLista{
         display: flex;
         flex-direction: column;
