--- a/src/app/listatarefa/listatarefa.component.css
+++ b/src/app/listatarefa/listatarefa.component.css
@@ -62,7 +62,8 @@ button{
 }
 
 .button-new{
-    background: rgb(44, 100, 221);
+    text-align: left;
+    background: rgb(22, 107, 4);
 }
 .button-del{
     background: rgb(245, 69, 4);
