--- a/src/app/listatarefa/listatarefa.component.css
+++ b/src/app/listatarefa/listatarefa.component.css
@@ -5,7 +5,7 @@
     margin-top: 10px;
 }
 table{
-    margin: 0px 10px 0px 10px;
+    margin: 0px 0px 0px 0px;
     width: 100%;
     height: 260px;
     border-color:#bcc7d3;
@@ -32,7 +32,7 @@ td{
 .detalhe-tarefa{
     width: 100%;
     margin: 0px;
-    color: #343a40;
+    color: #696e72;
 }
 
  .form-group{
@@ -51,12 +51,13 @@ input  , select{
     padding: 5px 0px 5px 0px;
     border: 1px solid #bcc7d3 ;
     border-radius: 5px;
-    width: 250px;
+    width: 80%;
+    color:#696e72;
 }
 button{
     margin: 5px;
     padding: 5px;
-    color: white;
+    color: whitesmoke;
     background: rgb(2, 81, 100);
     border: none;
 }
@@ -67,6 +68,7 @@ button{
 }
 .button-del{
     background: rgb(245, 69, 4);
+    color:whitesmoke;
 }
 
 
