--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -23,8 +23,6 @@
         <app-sidebar></app-sidebar>
     </div>
     <div class="container">
-        <!--app-cards-->
-        <app-cards></app-cards>
         <!--table list tarefas-->
         <div class="tableLista">
             <table>
@@ -32,9 +30,9 @@
                     <th>Nome</th>
                     <th>Status</th>
                     <th>
-                        <button class="button-new"  (click)="showForm()">
+                        <button class="button-new" (click)="showForm()">
                             <fa-icon [icon]="faPlus"></fa-icon>
-                            
+
                         </button>
                     </th>
                 </thead>
@@ -46,7 +44,9 @@
                         <td *ngIf="item.status == 1">Pago</td>
                         <td>
 
-                            <a><fa-icon [icon]="faEdit"></fa-icon>Edit</a>
+                            <a>
+                                <fa-icon [icon]="faEdit"></fa-icon>Edit
+                            </a>
 
                         </td>
 
@@ -59,92 +59,91 @@
 
                 </tbody>
             </table>
+        </div>
 
 
 
-            <!--Tarefas detalhes update-->
-            <div *ngIf="showEditTarefa">
-                <div *ngIf="selectedTarefa" class="detalhe-tarefa">
-                    <h5>{{selectedTarefa.nome}}</h5>
-                    <form #f="ngForm" (ngSubmit)="onUpdateTarefa(f)">
-                        <div class="form-group">
-                            <label for="nome">Nome</label>
-                            <input type="text" [(ngModel)]="selectedTarefa.nome" value={{selectedTarefa.nome}}
-                                name="nome">
-                        </div>
-                        <div class="form-group">
-                            <label for="local">Local</label>
-                            <input type="text" [(ngModel)]="selectedTarefa.local" value={{selectedTarefa.local}}
-                                name="local">
-                        </div>
+        <!--Tarefas detalhes update-->
+        <div *ngIf="showEditTarefa">
+            <div *ngIf="selectedTarefa" class="detalhe-tarefa">
+                <h5>{{selectedTarefa.nome}}</h5>
+                <form #f="ngForm" (ngSubmit)="onUpdateTarefa(f)">
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" [(ngModel)]="selectedTarefa.nome" value={{selectedTarefa.nome}} name="nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="local">Local</label>
+                        <input type="text" [(ngModel)]="selectedTarefa.local" value={{selectedTarefa.local}}
+                            name="local">
+                    </div>
 
-                        <div class="form-group">
-                            <label for="status">Status</label>
-                            <!--<input type="text" [(ngModel)]="selectedTarefa.status" value="" name="status">-->
-                            <select name="status" id="" [(ngModel)]="selectedTarefa.status">
-                                <option value="">Situação</option>
-                                <option value="1">Pago</option>
-                                <option value="0">Pendente</option>
-                            </select>
-                        </div>
+                    <div class="form-group">
+                        <label for="status">Status</label>
+                        <!--<input type="text" [(ngModel)]="selectedTarefa.status" value="" name="status">-->
+                        <select name="status" id="" [(ngModel)]="selectedTarefa.status">
+                            <option value="">Situação</option>
+                            <option value="1">Pago</option>
+                            <option value="0">Pendente</option>
+                        </select>
+                    </div>
 
-                        <div class="form-group">
-                            <label for="valor">Valor</label>
-                            <input type="text" [(ngModel)]="selectedTarefa.valor" value={{selectedTarefa.valor}}
-                                name="valor">
-                        </div>
-                        <div class="form-group">
-                            <label for="data">Data</label>
-                            <input type="date" [(ngModel)]="selectedTarefa.data" value={{selectedTarefa.data}}
-                                name="data">
-                        </div>
+                    <div class="form-group">
+                        <label for="valor">Valor</label>
+                        <input type="text" [(ngModel)]="selectedTarefa.valor" value={{selectedTarefa.valor}}
+                            name="valor">
+                    </div>
+                    <div class="form-group">
+                        <label for="data">Data</label>
+                        <input type="date" [(ngModel)]="selectedTarefa.data" value={{selectedTarefa.data}} name="data">
+                    </div>
 
-                        <div class="button">
-                            <button type="submit">Salvar</button>
-                            <button class="button-del"><a (click)="excluirTarefa(selectedTarefa.id)">Excluir</a></button>
-                            
-                        </div>
-                    </form>
-                </div>
+                    <div class="button">
+                        <button type="submit">Salvar</button>
+                        <button type="button" class="button-del"><a (click)="excluirTarefa(selectedTarefa.id)"  class="button-del">Excluir</a></button>
+
+                    </div>
+                </form>
+              
             </div>
-            <!--Novo Registro-->
-            <div *ngIf="showformTarefa">
-                <div class="novoRegistro">
-                    <h2>Nova Terefa</h2>
-                    <form #f="ngForm" (ngSubmit)="novaTarefa(f)">
-                        <div class="form-group">
-                            <label for="nome">Nome</label>
-                            <input type="text" ngModel name="nome">
-                        </div>
-                        <div class="form-group">
-                            <label for="local">Local</label>
-                            <input type="text" ngModel name="local">
-                        </div>
+        </div>
+        <!--Novo Registro-->
+        <div *ngIf="showformTarefa">
+            <div class="novoRegistro">
+                <h5>Nova Terefa</h5>
+                <form #f="ngForm" (ngSubmit)="novaTarefa(f)">
+                    <div class="form-group">
+                        <label for="nome">Nome</label>
+                        <input type="text" ngModel name="nome">
+                    </div>
+                    <div class="form-group">
+                        <label for="local">Local</label>
+                        <input type="text" ngModel name="local">
+                    </div>
 
-                        <div class="form-group">
-                            <label for="status">Status</label>
-                            <select name="situacao" id="" ngModel>
-                                <option value="">Situação</option>
-                                <option value="1">Pago</option>
-                                <option value="0">Pendente</option>
-                            </select>
-                        </div>
+                    <div class="form-group">
+                        <label for="status">Status</label>
+                        <select name="situacao" id="" ngModel>
+                            <option value="">Situação</option>
+                            <option value="1">Pago</option>
+                            <option value="0">Pendente</option>
+                        </select>
+                    </div>
 
-                        <div class="form-group">
-                            <label for="valor">Valor</label>
-                            <input type="text" ngModel name="valor">
-                        </div>
-                        <div class="form-group">
-                            <label for="data">Data</label>
-                            <input type="date" ngModel name="data">
-                        </div>
+                    <div class="form-group">
+                        <label for="valor">Valor</label>
+                        <input type="text" ngModel name="valor">
+                    </div>
+                    <div class="form-group">
+                        <label for="data">Data</label>
+                        <input type="date" ngModel name="data">
+                    </div>
 
-                        <div class="button">
-                            <button type="submit">Salvar</button>
-                            <a (click)="voltarfrom()">Voltar</a>
-                        </div>
-                    </form>
-                </div>
+                    <div class="button">
+                        <button type="submit">Salvar</button>
+                        <a (click)="voltarfrom()">Voltar</a>
+                    </div>
+                </form>
             </div>
         </div>
         <!--<div class="footer">
