--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header>
+<!--<header>
     <div class="menu">
       <h2 class="logo"> <fa-icon [icon]="faList" id="icon"></fa-icon>APP TODO LISTE</h2>
       <nav>
@@ -6,4 +6,14 @@
         
       </nav>
     </div>
-</header>
+</header>-->
+
+<!-- Just an image -->
+<nav class="navbar  navbar-light bg-primary justify--content-between ">
+  <a class="navbar-brand" href="#">
+    TodoListe
+  </a>
+
+  <a [routerLink]="['']"><fa-icon [icon] = "faHome"></fa-icon>Home</a>
+
+</nav>
