--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -27,7 +27,7 @@ button {
     justify-content: center;
     
     margin: 100px auto;
-    border: 1px solid gray;
+    border: 1px solid rgb(128, 128, 128);
     border-radius: 5px;
     width: 25%;
     height: 350px;
