--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
 <app-navbar></app-navbar>
 
-<section class="login">
+<!--<section class="login">
      
   <form #f="ngForm" (ngSubmit)="login(f)">
       <h3>Admin</h3>
@@ -28,7 +28,38 @@
     </form>
     
 
-</section>
+</section>-->
+<div class="login">
+
+  <form  #f="ngForm" (ngSubmit)="login(f)">
+    <h3>Admin</h3>
+    <div *ngIf="error">
+      <p><strong>{{error}}</strong></p>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"  name="email" ngModel>
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <div class="button">
+      <button type="submit" class="btn btn-primary">
+      <fa-icon [icon]="faUserLock"></fa-icon>  Login
+      </button>
+      <a href="/caduser"><fa-icon [icon]="faUserPlus"></fa-icon>Cadastra-se</a>
+      <a href="#"><fa-icon [icon]="faKey"></fa-icon>Recurar senha</a>
+
+    </div>
+   
+  </form>
+</div>
 
 
 
