new-layout-new-listComponent

--- a/src/app/listatarefa/listatarefa.component.html
+++ b/src/app/listatarefa/listatarefa.component.html
@@ -23,18 +23,16 @@
         <app-sidebar></app-sidebar>
     </div>
     <div class="container">
+        <!--new list-->
+        <app-new-list></app-new-list>
+
         <!--table list tarefas-->
         <div class="tableLista">
             <table>
                 <thead>
                     <th>Nome</th>
                     <th>Status</th>
-                    <th>
-                        <button class="button-new" (click)="showForm()">
-                            <fa-icon [icon]="faPlus"></fa-icon>
-
-                        </button>
-                    </th>
+                    <th>Action</th>
                 </thead>
                 <tbody>
                     <tr *ngFor="let item of listaTarefas |  paginate: { itemsPerPage: 5, currentPage: p }"
@@ -100,51 +98,14 @@
 
                     <div class="button">
                         <button type="submit">Salvar</button>
-                        <button type="button" class="button-del"><a (click)="excluirTarefa(selectedTarefa.id)"  class="button-del">Excluir</a></button>
+                        <button type="button" class="button-del"><a (click)="excluirTarefa(selectedTarefa.id)"
+                                class="button-del">Excluir</a></button>
                     </div>
                 </form>
-              
+
             </div>
         </div>
-        <!--Novo Registro-->
-        <div *ngIf="showformTarefa">
-            <div class="novoRegistro">
-                <h5>Nova Terefa</h5>
-                <form #f="ngForm" (ngSubmit)="novaTarefa(f)">
-                    <div class="form-group">
-                        <label for="nome">Nome</label>
-                        <input type="text" ngModel name="nome">
-                    </div>
-                    <div class="form-group">
-                        <label for="local">Local</label>
-                        <input type="text" ngModel name="local">
-                    </div>
 
-                    <div class="form-group">
-                        <label for="status">Status</label>
-                        <select name="situacao" id="" ngModel>
-                            <option value="">Situação</option>
-                            <option value="1">Pago</option>
-                            <option value="0">Pendente</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="valor">Valor</label>
-                        <input type="text" ngModel name="valor">
-                    </div>
-                    <div class="form-group">
-                        <label for="data">Data</label>
-                        <input type="date" ngModel name="data">
-                    </div>
-
-                    <div class="button">
-                        <button type="submit">Salvar</button>
-                        <a (click)="voltarfrom()">Voltar</a>
-                    </div>
-                </form>
-            </div>
-        </div>
         <!--<div class="footer">
             footer
         </div>-->
