--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,15 +1,5 @@
-<!--<header>
-    <div class="menu">
-      <h2 class="logo"> <fa-icon [icon]="faList" id="icon"></fa-icon>APP TODO LISTE</h2>
-      <nav>
-        <a [routerLink]="['']"><fa-icon [icon] = "faHome"></fa-icon>Home</a>
-        
-      </nav>
-    </div>
-</header>-->
 
-<!-- Just an image -->
-<nav class="navbar  navbar-light bg-primary justify--content-between ">
+<nav class="navbar  navbar-light bg-dark justify--content-between ">
   <a class="navbar-brand" href="#">
     TodoListe
   </a>
