--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,18 +1,19 @@
-button , a {
-    margin-top: 10px;
-}
+
 a {
-    color: rgb(53, 50, 50);
-    margin: 10px;
+    color: #fff;
+    margin: 5px;
+   
 }
 
+button a:houver{
+   text-decoration: nome;
+}
 
 button {
-    background:rgba(0, 0, 0, .7);
     color: #fff;
     font-size: 12px;
-    padding: 10px;
     border: none;
+    margin: 5px;
 }
 
 .login h3 {
@@ -27,13 +28,10 @@ button {
     justify-content: center;
     
     margin: 100px auto;
-    border: 1px solid rgb(128, 128, 128);
     border-radius: 5px;
-    width: 25%;
-    height: 350px;
     color: rgb(53, 50, 50);
     font-size: 12px;
-  
+
 }
 .login p {
     text-align: center;
@@ -43,18 +41,16 @@ button {
 }
 
 .form-group input{
-    border: 1px solid gray;
+    border: 1px solid rgb(228, 221, 221);
+    color:  rgb(228, 221, 221);
     margin: 10px 0px 10px 0px;
     border-radius: 5px;
     padding: 10px;
-    width: 300px;
+    
+   
 }
 
-@media screen and (min-width:250px){
-    .login {
-        width: 350px;
-    }
-}
+
 
 
 
