--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,35 +30,46 @@
 
 </section>-->
 <div class="login">
-
-  <form  #f="ngForm" (ngSubmit)="login(f)">
-    <h3>Admin</h3>
-    <div *ngIf="error">
-      <p><strong>{{error}}</strong></p>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"  name="email" ngModel>
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <div class="button">
-      <button type="submit" class="btn btn-primary">
-      <fa-icon [icon]="faUserLock"></fa-icon>  Login
-      </button>
-      <a href="/caduser"><fa-icon [icon]="faUserPlus"></fa-icon>Cadastra-se</a>
-      <a href="#"><fa-icon [icon]="faKey"></fa-icon>Recurar senha</a>
-
-    </div>
+<div class="card text-center">
+  <div class="card-header  bg-light">
+    <h6>Admin</h6>
+  </div>
+  <div class="card-body">
+    <form  #f="ngForm" (ngSubmit)="login(f)">
+      <div *ngIf="error">
+        <p><strong>{{error}}</strong></p>
+      </div>
+      <div class="form-group">
+        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"  name="email" ngModel>
+       
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control"  placeholder="Password"  name="password" ngModel>
+      </div>
+    
+      <div class="button">
+        <button type="submit" class="btn btn-primary">
+        <fa-icon [icon]="faUserLock"></fa-icon>  Login
+        </button>
+    
+        <button class="btn btn-info">
+          <a href="/caduser">
+            <fa-icon [icon]="faUserPlus"></fa-icon>Cadastra-se
+          </a>
+        </button>
+        <button class="btn btn-secondary">
+          <a href="#"><fa-icon [icon]="faKey"></fa-icon>reset senha
+          </a>
+        </button>
+      </div>
+     
+    </form>
    
-  </form>
+  </div>
+  <div class="card-footer text-muted  bg-light">
+   Bem vindo !
+  </div>
+</div>
 </div>
 
 
